Finish main news layout

--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1322,7 +1322,6 @@ body{
     width: 90%;
     color: #484848;
     font-family: 'DM_Sans_Regular';
-    padding-left: 5px;
 }
 
 .new h1{
@@ -1347,7 +1346,7 @@ body{
     gap: 12px;
 }
 .newsBottomTitleContainer:hover .newsBottomArrow{
-    transform: translateX(6px);
+    transform: translateX(8px);
 }
 .newsBottomTitleContainer{
     padding: 10px 5px 10px 0px;
@@ -1401,6 +1400,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     height: 190px;
+    width: 97%;
 }
 .newsBottomline{
     width: 100%;
@@ -1432,7 +1432,7 @@ body{
     height: 100%;
     object-fit: cover;
     object-position: center;
-    transition: all 0.1s;
+    transition: all 0.25s;
 }
 .newsBottom2{
     grid-template-columns: 2/3;
@@ -1578,6 +1578,115 @@ body{
     display: flex;
     flex-direction: column;
     gap: 16px;
+}
+
+.newsBottomContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 0px 100px 120px 100px;
+    gap: 12px;
+}
+.newsBottomTitleContainer:hover .newsBottomArrow{
+    transform: translateX(8px);
+}
+.newsBottomTitleContainer{
+    padding: 10px 5px 10px 0px;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    gap: 8px;
+}
+.newsBottomTitleContainer h3{
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'DM_Sans_ExtraBold';
+ }
+ .newsBottomArrow{
+    transition: all 0.25s;
+    width: 22px;
+ }
+ .newsBottomCard{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+ }
+ .newsBottomCard h1{
+    transition: all 0.1s;
+ }
+ .newsBottomCard p{
+    transition: all 0.1s;
+ }
+ .newsBottomCard:hover h1{
+    color: #F7A524;
+ }
+  .newsBottomCard:hover p{
+    color: black;
+ }
+.newsBottomInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.bottomNewsCardTitle{
+    font-size: 26px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+}
+.bottomNewsText{
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+    justify-content: space-between;
+    height: fit-content;
+}
+.newsBottomline{
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+}
+.newsBottomNewsContainer{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,auto);
+    gap: 30px;
+}
+.newsBottom1{
+    grid-template-columns: 1/2;
+}
+.newsBottomCard:hover .bottomNewsImg img{
+    scale: 1.02;
+}
+.bottomNewsImg{
+    height: 340px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bottomNewsImg img{
+    will-change: transform;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.newsBottom2{
+    grid-template-columns: 2/3;
+}
+.newsBottom3{
+    margin-top: 30px;
+    grid-template-columns: 3/4;
+}
+.newsBottom4{
+    margin-top: 30px;
+    grid-template-columns: 4/5;
 }
 }
 
@@ -2174,6 +2283,117 @@ body{
     width: 97%;
 }
 
+
+.newsBottomContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 0px 70px 120px 70px;
+    gap: 12px;
+}
+.newsBottomTitleContainer:hover .newsBottomArrow{
+    transform: translateX(8px);
+}
+.newsBottomTitleContainer{
+    padding: 10px 5px 10px 0px;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    gap: 8px;
+}
+.newsBottomTitleContainer h3{
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'DM_Sans_ExtraBold';
+ }
+ .newsBottomArrow{
+    transition: all 0.25s;
+    width: 22px;
+ }
+ .newsBottomCard{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+ }
+ .newsBottomCard h1{
+    transition: all 0.1s;
+ }
+ .newsBottomCard p{
+    transition: all 0.1s;
+ }
+ .newsBottomCard:hover h1{
+    color: #F7A524;
+ }
+  .newsBottomCard:hover p{
+    color: black;
+ }
+.newsBottomInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.bottomNewsCardTitle{
+    font-size: 26px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+}
+.bottomNewsText{
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+    justify-content: space-between;
+    height: fit-content;
+    width: 96%;
+}
+.newsBottomline{
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+}
+.newsBottomNewsContainer{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,auto);
+    gap: 30px;
+}
+.newsBottom1{
+    grid-template-columns: 1/2;
+}
+.newsBottomCard:hover .bottomNewsImg img{
+    scale: 1.02;
+}
+.bottomNewsImg{
+    height: auto;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bottomNewsImg img{
+    will-change: transform;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.newsBottom2{
+    grid-template-columns: 2/3;
+}
+.newsBottom3{
+    margin-top: 30px;
+    grid-template-columns: 3/4;
+}
+.newsBottom4{
+    margin-top: 30px;
+    grid-template-columns: 4/5;
+}
+
 }
 
 @media screen and (max-width: 950px){
@@ -2662,6 +2882,116 @@ body{
     font-size: 16px;
     padding: 0px;
 }
+
+.newsBottomContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 0px 50px 120px 50px;
+    gap: 12px;
+}
+.newsBottomTitleContainer:hover .newsBottomArrow{
+    transform: translateX(8px);
+}
+.newsBottomTitleContainer{
+    padding: 10px 5px 10px 0px;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    gap: 8px;
+}
+.newsBottomTitleContainer h3{
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'DM_Sans_ExtraBold';
+ }
+ .newsBottomArrow{
+    transition: all 0.25s;
+    width: 22px;
+ }
+ .newsBottomCard{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+ }
+ .newsBottomCard h1{
+    transition: all 0.1s;
+ }
+ .newsBottomCard p{
+    transition: all 0.1s;
+ }
+ .newsBottomCard:hover h1{
+    color: #F7A524;
+ }
+  .newsBottomCard:hover p{
+    color: black;
+ }
+.newsBottomInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.bottomNewsCardTitle{
+    font-size: 23px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+}
+.bottomNewsText{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: space-between;
+    height: fit-content;
+    width: 96%;
+}
+.newsBottomline{
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+}
+.newsBottomNewsContainer{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,auto);
+    gap: 30px;
+}
+.newsBottom1{
+    grid-template-columns: 1/2;
+}
+.newsBottomCard:hover .bottomNewsImg img{
+    scale: 1.02;
+}
+.bottomNewsImg{
+    height: auto;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bottomNewsImg img{
+    will-change: transform;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.newsBottom2{
+    grid-template-columns: 2/3;
+}
+.newsBottom3{
+    margin-top: 30px;
+    grid-template-columns: 3/4;
+}
+.newsBottom4{
+    margin-top: 30px;
+    grid-template-columns: 4/5;
+}
 }
 
 @media screen and (max-width: 830px){
@@ -2936,6 +3266,128 @@ body{
 .news45Description, .news23Description{
     font-size: 16px;
     padding: 0px;
+}
+
+.bottomNewsImg{
+    height: 190px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+}
+
+@media screen and (max-width:600px){
+    .newsBottomContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 0px 50px 120px 50px;
+    gap: 12px;
+}
+.newsBottomTitleContainer:hover .newsBottomArrow{
+    transform: translateX(8px);
+}
+.newsBottomTitleContainer{
+    padding: 10px 5px 10px 0px;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    gap: 8px;
+}
+.newsBottomTitleContainer h3{
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'DM_Sans_ExtraBold';
+ }
+ .newsBottomArrow{
+    transition: all 0.25s;
+    width: 22px;
+ }
+ .newsBottomCard{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+ }
+ .newsBottomCard h1{
+    transition: all 0.1s;
+ }
+ .newsBottomCard p{
+    transition: all 0.1s;
+ }
+ .newsBottomCard:hover h1{
+    color: #F7A524;
+ }
+  .newsBottomCard:hover p{
+    color: black;
+ }
+.newsBottomInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.bottomNewsCardTitle{
+    font-size: 23px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+}
+.bottomNewsText{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: space-between;
+    height: fit-content;
+    width: 96%;
+}
+.newsBottomline{
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+}
+.newsBottomNewsContainer{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4,auto);
+    gap: 30px;
+}
+.newsBottom1{
+    grid-template-columns: 1/2;
+}
+.newsBottomCard:hover .bottomNewsImg img{
+    scale: 1.02;
+}
+.bottomNewsImg{
+    height: auto;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bottomNewsImg img{
+    will-change: transform;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.newsBottom2{
+    margin-top: 20px;
+    grid-template-columns: 2/3;
+}
+.newsBottom3{
+    margin-top: 20px;
+    grid-template-columns: 3/4;
+}
+.newsBottom4{
+    margin-top: 20px;
+    grid-template-columns: 4/5;
 }
 }
 
@@ -3564,6 +4016,117 @@ body{
     padding: 0px;
 }
 
+
+    .newsBottomContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 80px;
+    padding: 0px 20px 100px 20px;
+    gap: 12px;
+}
+.newsBottomTitleContainer:hover .newsBottomArrow{
+    transform: translateX(8px);
+}
+.newsBottomTitleContainer{
+    padding: 10px 5px 10px 0px;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    gap: 8px;
+}
+.newsBottomTitleContainer h3{
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'DM_Sans_ExtraBold';
+ }
+ .newsBottomArrow{
+    transition: all 0.25s;
+    width: 22px;
+ }
+ .newsBottomCard{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+ }
+ .newsBottomCard h1{
+    transition: all 0.1s;
+ }
+ .newsBottomCard p{
+    transition: all 0.1s;
+ }
+ .newsBottomCard:hover h1{
+    color: #F7A524;
+ }
+  .newsBottomCard:hover p{
+    color: black;
+ }
+.newsBottomInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.bottomNewsCardTitle{
+    font-size: 23px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+}
+.bottomNewsText{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: space-between;
+    height: fit-content;
+    width: 96%;
+}
+.newsBottomline{
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+}
+.newsBottomNewsContainer{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4,auto);
+    gap: 30px;
+}
+.newsBottom1{
+    grid-template-columns: 1/2;
+}
+.newsBottomCard:hover .bottomNewsImg img{
+    scale: 1.02;
+}
+.bottomNewsImg{
+    height: auto;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bottomNewsImg img{
+    will-change: transform;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.newsBottom2{
+    margin-top: 20px;
+    grid-template-columns: 2/3;
+}
+.newsBottom3{
+    margin-top: 20px;
+    grid-template-columns: 3/4;
+}
+.newsBottom4{
+    margin-top: 20px;
+    grid-template-columns: 4/5;
+}
 
 }   
 
